# headlines-bot

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __main__.py  config.py
app/bot/: __init__.py  bot.py
app/bot/callbacks/: factory.py
app/bot/handlers/: __init__.py  faq.py  news.py  settings.py  start.py  subscriptions.py
app/bot/keyboards/: inline.py
app/bot/middlewares/: db.py
app/db/: __init__.py  engine.py  models.py
app/db/repositories/: __init__.py  headline.py  subscription.py  user.py
app/services/: __init__.py  notifier.py  scraper.py
app/sources/: __init__.py  base.py  guardian.py  nytimes.py  registry.py  rss_source.py
app/utils/: formatting.py
docker/postgres/: init.sql
docs/: database_and_run.md
headlines_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
