[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "headlines-bot"
version = "0.1.0"
description = "Asynchronous Telegram news aggregator bot for market analytics teams"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "OpenAI" }
]
dependencies = [
  "aiogram>=3.13.1,<4.0.0",
  "aiohttp>=3.10.10,<4.0.0",
  "SQLAlchemy>=2.0.36,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  "lxml>=5.3.0,<6.0.0",
  "feedparser>=6.0.11,<7.0.0",
  "pydantic>=2.9.2,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "loguru>=0.7.2,<1.0.0",
  "greenlet>=3.1.1,<4.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.13.0,<2.0.0",
  "ruff>=0.7.1,<1.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "B",
  "UP",
  "ASYNC",
  "C4",
  "SIM"
]
ignore = [
  "B008"
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = []